pa3/cool.output
Terminals unused in grammar

   ERROR


State 74 conflicts: 1 shift/reduce
State 95 conflicts: 12 reduce/reduce
State 117 conflicts: 10 reduce/reduce
State 145 conflicts: 9 shift/reduce
State 157 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID error TYPEID '{' feature_list '}' ';'

    7 feature_list: /* empty */
    8             | feature_list feature

    9 feature: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'
   13        | error ';'

   14 formals: formals ',' formal
   15        | formal

   16 formal: OBJECTID ':' TYPEID

   17 expr_seq: expr_seq expr ';'
   18         | expr ';'
   19         | error ';'

   20 expr_commas: expr_commas ',' expr
   21            | expr
   22            | expr_commas error '\n'

   23 expr: OBJECTID ASSIGN expr
   24     | OBJECTID '(' ')'
   25     | OBJECTID '(' expr_commas ')'
   26     | OBJECTID '(' error
   27     | expr '.' OBJECTID '(' ')'
   28     | expr '.' OBJECTID '(' expr_commas ')'
   29     | expr '@' TYPEID '.' OBJECTID '(' ')'
   30     | expr '@' TYPEID '.' OBJECTID '(' expr_commas ')'
   31     | IF expr THEN expr ELSE expr FI
   32     | WHILE expr LOOP expr POOL
   33     | WHILE expr LOOP error
   34     | '{' expr_seq '}'
   35     | LET let_inner
   36     | CASE expr OF cases ESAC
   37     | NEW TYPEID
   38     | ISVOID expr
   39     | expr '+' expr
   40     | expr '-' expr
   41     | expr '*' expr
   42     | expr '/' expr
   43     | '~' expr
   44     | expr '<' expr
   45     | expr LE expr
   46     | expr '=' expr
   47     | NOT expr
   48     | '(' expr ')'
   49     | OBJECTID
   50     | INT_CONST
   51     | STR_CONST
   52     | BOOL_CONST
   53     | error

   54 let_inner: OBJECTID ':' TYPEID ASSIGN expr ',' let_inner
   55          | OBJECTID ':' TYPEID ASSIGN expr IN expr
   56          | OBJECTID ':' TYPEID ',' let_inner
   57          | OBJECTID ':' TYPEID IN expr

   58 cases: cases case
   59      | case

   60 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 22
'(' (40) 9 10 24 25 26 27 28 29 30 48
')' (41) 9 10 24 25 27 28 29 30 48
'*' (42) 41
'+' (43) 39
',' (44) 14 20 54 56
'-' (45) 40
'.' (46) 27 28 29 30
'/' (47) 42
':' (58) 9 10 11 12 16 54 55 56 57 60
';' (59) 4 5 6 9 10 11 12 13 17 18 19 60
'<' (60) 44
'=' (61) 46
'@' (64) 29 30
'{' (123) 4 5 6 9 10 34
'}' (125) 4 5 6 9 10 34
'~' (126) 43
error (256) 6 13 19 22 26 33 53
CLASS (258) 4 5 6
ELSE (259) 31
FI (260) 31
IF (261) 31
IN (262) 55 57
INHERITS (263) 5
LET (264) 35
LOOP (265) 32 33
POOL (266) 32
THEN (267) 31
WHILE (268) 32 33
CASE (269) 36
ESAC (270) 36
OF (271) 36
DARROW (272) 60
NEW (273) 37
ISVOID (274) 38
STR_CONST (275) 51
INT_CONST (276) 50
BOOL_CONST (277) 52
TYPEID (278) 4 5 6 9 10 11 12 16 29 30 37 54 55 56 57 60
OBJECTID (279) 9 10 11 12 16 23 24 25 26 27 28 29 30 49 54 55 56 57
    60
ASSIGN (280) 12 23 54 55
NOT (281) 47
LE (282) 45
ERROR (283)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5 6, on right: 2 3
feature_list (50)
    on left: 7 8, on right: 4 5 6 8
feature (51)
    on left: 9 10 11 12 13, on right: 8
formals (52)
    on left: 14 15, on right: 9 14
formal (53)
    on left: 16, on right: 14 15
expr_seq (54)
    on left: 17 18 19, on right: 17 34
expr_commas (55)
    on left: 20 21 22, on right: 20 22 25 28 30
expr (56)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45 46 47 48 49 50 51 52 53, on right: 9 10 12 17 18
    20 21 23 27 28 29 30 31 32 33 36 38 39 40 41 42 43 44 45 46 47
    48 54 55 57 60
let_inner (57)
    on left: 54 55 56 57, on right: 35 54 56
cases (58)
    on left: 58 59, on right: 36 58
case (59)
    on left: 60, on right: 58 59


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID error TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID . error TYPEID '{' feature_list '}' ';'

    error     shift, and go to state 8
    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    6 class: CLASS TYPEID error . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


state 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


state 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


state 11

    6 class: CLASS TYPEID error TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


state 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


state 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


state 14

    6 class: CLASS TYPEID error TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 20


state 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 21


state 16

   13 feature: error . ';'

    ';'  shift, and go to state 22


state 17

    9 feature: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 23
    ':'  shift, and go to state 24


state 18

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 25


state 19

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


state 20

    6 class: CLASS TYPEID error TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 26

    feature  go to state 19


state 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 27

    feature  go to state 19


state 22

   13 feature: error ';' .

    $default  reduce using rule 13 (feature)


state 23

    9 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 28
    ')'       shift, and go to state 29

    formals  go to state 30
    formal   go to state 31


state 24

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 32


state 25

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 26

    6 class: CLASS TYPEID error TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 33


state 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 34


state 28

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 35


state 29

   10 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 36


state 30

    9 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}' ';'
   14 formals: formals . ',' formal

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


state 31

   15 formals: formal .

    $default  reduce using rule 15 (formals)


state 32

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 39
    ';'     shift, and go to state 40


state 33

    6 class: CLASS TYPEID error TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 34

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 35

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 41


state 36

   10 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 42


state 37

    9 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 43


state 38

   14 formals: formals ',' . formal

    OBJECTID  shift, and go to state 28

    formal  go to state 44


state 39

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 60


state 40

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


state 41

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


state 42

   10 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 61


state 43

    9 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 62


state 44

   14 formals: formals ',' formal .

    $default  reduce using rule 14 (formals)


state 45

   53 expr: error .

    $default  reduce using rule 53 (expr)


state 46

   31 expr: IF . expr THEN expr ELSE expr FI

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 63


state 47

   35 expr: LET . let_inner

    OBJECTID  shift, and go to state 64

    let_inner  go to state 65


state 48

   32 expr: WHILE . expr LOOP expr POOL
   33     | WHILE . expr LOOP error

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 66


state 49

   36 expr: CASE . expr OF cases ESAC

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 67


state 50

   37 expr: NEW . TYPEID

    TYPEID  shift, and go to state 68


state 51

   38 expr: ISVOID . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 69


state 52

   51 expr: STR_CONST .

    $default  reduce using rule 51 (expr)


state 53

   50 expr: INT_CONST .

    $default  reduce using rule 50 (expr)


state 54

   52 expr: BOOL_CONST .

    $default  reduce using rule 52 (expr)


state 55

   23 expr: OBJECTID . ASSIGN expr
   24     | OBJECTID . '(' ')'
   25     | OBJECTID . '(' expr_commas ')'
   26     | OBJECTID . '(' error
   49     | OBJECTID .

    ASSIGN  shift, and go to state 70
    '('     shift, and go to state 71

    $default  reduce using rule 49 (expr)


state 56

   47 expr: NOT . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 72


state 57

   43 expr: '~' . expr

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 73


state 58

   34 expr: '{' . expr_seq '}'

    error       shift, and go to state 74
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr_seq  go to state 75
    expr      go to state 76


state 59

   48 expr: '(' . expr ')'

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 77


state 60

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   27 expr: expr . '.' OBJECTID '(' ')'
   28     | expr . '.' OBJECTID '(' expr_commas ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_commas ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86
    ';'  shift, and go to state 87


state 61

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'

    error       shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 88


state 62

    9 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 89


state 63

   27 expr: expr . '.' OBJECTID '(' ')'
   28     | expr . '.' OBJECTID '(' expr_commas ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_commas ')'
   31     | IF expr . THEN expr ELSE expr FI
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    THEN  shift, and go to state 90
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


state 64

   54 let_inner: OBJECTID . ':' TYPEID ASSIGN expr ',' let_inner
   55          | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   56          | OBJECTID . ':' TYPEID ',' let_inner
   57          | OBJECTID . ':' TYPEID IN expr

    ':'  shift, and go to state 91


state 65

   35 expr: LET let_inner .

    $default  reduce using rule 35 (expr)


state 66

   27 expr: expr . '.' OBJECTID '(' ')'
   28     | expr . '.' OBJECTID '(' expr_commas ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_commas ')'
   32     | WHILE expr . LOOP expr POOL
   33     | WHILE expr . LOOP error
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LOOP  shift, and go to state 92
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


state 67

   27 expr: expr . '.' OBJECTID '(' ')'
   28     | expr . '.' OBJECTID '(' expr_commas ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_commas ')'
   36     | CASE expr . OF cases ESAC
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    OF   shift, and go to state 93
    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86


state 68

   37 expr: NEW TYPEID .

    $default  reduce using rule 37 (expr)


state 69

   27 expr: expr . '.' OBJECTID '(' ')'
   28     | expr . '.' OBJECTID '(' expr_commas ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   30     | expr . '@' TYPEID '.' OBJECTID '(' expr_commas ')'
   38     | ISVOID expr .
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 38 (expr)


state 70

   23 expr: OBJECTID ASSIGN . expr
